--- a/src/components/palette/SavedPalette.scss
+++ b/src/components/palette/SavedPalette.scss
@@ -207,3 +207,40 @@
         height: 100%;
     }
 }
+
+@media (min-width:1024px){
+    .palette-color-stripes{
+        height: 50px;
+    }
+
+    .palette-sprites-container{
+        height: 35px;
+        img{
+            transform: scale(1);
+        }
+    }
+
+    .saved-palette-options{
+    display: flex;
+    gap: 16px;
+
+    button{
+        padding: 0;
+        margin:0;
+        display: inline;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        margin: -10px;
+
+        .material-symbols-rounded {
+        font-variation-settings:
+        'FILL' 0,
+        'wght' 350,
+        'GRAD' 0,
+        'opsz' 16
+        }
+    }
+}
+}
