--- a/src/components/palette/SavedPaletteWindow.scss
+++ b/src/components/palette/SavedPaletteWindow.scss
@@ -8,14 +8,13 @@
     position: absolute;
     background-color: rgba(239, 239, 239, 1);
     border-radius: 24px;
-    // padding-bottom: 24px;
-    left: 0;
     top: 10%;
     z-index: 100;
     display: flex;
     flex-direction: column;
     font-family: v.$secondary-font;
-    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.15);  
+    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.15);
+    will-change: transform;
 
 
     input{
@@ -131,12 +130,37 @@
 
 @media(min-width:1024px){
     .savedPaletteWindow{
-        width: 30%;
-        scrollbar-width: none;
+        // position: relative;
+        width: 320px;
         height: 100%;
         top: 0;
+        right: 0;
         overflow: hidden;
         border-radius: 0px;
         box-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
+        background-color: #ECECEC;
+
+        input{
+            margin: 0px 8px;
+            margin-top: 8px;
+            height: 2.5rem;
+            font-size: 0.8rem;
+            border-radius: 12px;
+            font-weight: 500;
+        }
+    }
+
+    .savedPalettesPane{
+        scrollbar-width: none;
+    }
+
+    .savedPaletteHeader{
+        padding: 16px 8px;
+        font-size: 0.8rem;
+        line-height: 24px;
+
+        // h1{
+        //     display: none;
+        // }
     }
 }
